Street level update in spawning car

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -25,7 +25,7 @@ PreviewDeviceProfileName=None
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowWidth=1910
-NewWindowHeight=1038
+NewWindowHeight=1046
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -178,7 +178,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Assets/3D/Street
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Street
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -212,28 +212,31 @@ LastLevel=/Game/Maps/Street
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Assets/3D/City/street_kinda_Cube_051.street_kinda_Cube_051
+OpenAssetsAtExit=/Game/Maps/Street.Street:PersistentLevel.Street
+OpenAssetsAtExit=/Game/Blueprints/Street/Car1.Car1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/3D/City/street_kinda_Cube_051
-MRUItem1=/Game/Assets/3D/City/street_kinda_Cube_035
-MRUItem2=/Game/Assets/3D/City/street_kinda_Cube_055
-MRUItem3=/Game/Assets/3D/City/street_kinda_Cube_052
-MRUItem4=/Game/Assets/3D/City/street_kinda_Cube_054
-MRUItem5=/Game/Maps/Street
-MRUItem6=/Game/Maps/School
-MRUItem7=/Game/Maps/Hospital
-MRUItem8=/Game/Assets/3D/City/Sidewalk/Material_033
-MRUItem9=/Game/Assets/3D/City/Sidewalk/side_walk_thingy
-MRUItem10=/Game/Maps/Park
-MRUItem11=/Game/Assets/3D/City/lambert5
-MRUItem12=/Game/Assets/3D/City/House_Materials/Third/Material_001
-MRUItem13=/Game/Assets/3D/City/House_Materials/Third/Material_003
-MRUItem14=/Game/Assets/3D/City/House_Materials/Third/Material_006
-MRUItem15=/Game/Assets/3D/City/House_Materials/Second/Material_001
-MRUItem16=/Game/Assets/3D/City/House_Materials/Second/Material_006
-MRUItem17=/Game/Assets/3D/City/House_Materials/Second/Material_003
-MRUItem18=/Game/Assets/3D/City/House_Materials/Second/Material_022
-MRUItem19=/Game/Assets/3D/City/base
+MRUItem0=/Game/Blueprints/Street/Car1
+MRUItem1=/Game/Assets/3D/City/street_kinda_Cube_051
+MRUItem2=/Game/Maps/Street
+MRUItem3=/Game/Maps/School
+MRUItem4=/Game/Assets/3D/City/street_kinda_Cube_035
+MRUItem5=/Game/Assets/3D/City/street_kinda_Cube_055
+MRUItem6=/Game/Assets/3D/City/street_kinda_Cube_052
+MRUItem7=/Game/Assets/3D/City/street_kinda_Cube_054
+MRUItem8=/Game/Maps/Hospital
+MRUItem9=/Game/Assets/3D/City/Sidewalk/Material_033
+MRUItem10=/Game/Assets/3D/City/Sidewalk/side_walk_thingy
+MRUItem11=/Game/Maps/Park
+MRUItem12=/Game/Assets/3D/City/lambert5
+MRUItem13=/Game/Assets/3D/City/House_Materials/Third/Material_001
+MRUItem14=/Game/Assets/3D/City/House_Materials/Third/Material_003
+MRUItem15=/Game/Assets/3D/City/House_Materials/Third/Material_006
+MRUItem16=/Game/Assets/3D/City/House_Materials/Second/Material_001
+MRUItem17=/Game/Assets/3D/City/House_Materials/Second/Material_006
+MRUItem18=/Game/Assets/3D/City/House_Materials/Second/Material_003
+MRUItem19=/Game/Assets/3D/City/House_Materials/Second/Material_022
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1290,6 +1293,32 @@ BP_CheckToAdvance_C.Collision=True
 BP_CheckToAdvance_C.Input=True
 BP_CheckToAdvance_C.TransformCommon=True
 LandscapeEditorObject.LandscapeEditor=True
+Car1_C.Tick=True
+Car1_C.Replication=True
+Car1_C.Rendering=True
+Car1_C.Actor=True
+Car1_C.Collision=True
+Car1_C.Input=True
+TargetPoint.TransformCommon=True
+TargetPoint.Sprite=True
+TargetPoint.Physics=True
+TargetPoint.Collision=True
+TargetPoint.Lighting=True
+TargetPoint.Rendering=True
+TargetPoint.Navigation=True
+TargetPoint.VirtualTexture=True
+TargetPoint.Tags=True
+TargetPoint.Activation=True
+TargetPoint.Cooking=True
+TargetPoint.ArrowComponent=True
+TargetPoint.Replication=True
+TargetPoint.Input=True
+TargetPoint.Actor=True
+Street_C.Tick=True
+Street_C.Replication=True
+Street_C.Actor=True
+Street_C.Input=True
+K2Node_GetInputAxisValue.Input=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1428,6 +1457,7 @@ LandscapeProxy="\"Object.Landscape.LandscapeMaterialsOverride\" "
 BoneProxy="\"Object.Reference Transform.ReferenceScale\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_3.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_3;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_2;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2_3.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2_3;
@@ -1447,10 +1477,9 @@ RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car_
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_21.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_21;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_20.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_20;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_19.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_19;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_18.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_18;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/BP_Menu.BP_Menu=0
@@ -1519,10 +1548,11 @@ LastLogListing=FBXImport
 /Game/Assets/3D/City/street_kinda_Cube_052.street_kinda_Cube_052=1
 /Game/Assets/3D/City/street_kinda_Cube_055.street_kinda_Cube_055=1
 /Game/Assets/3D/City/street_kinda_Cube_051.street_kinda_Cube_051=1
+/Game/Blueprints/Street/Car1.Car1=1
 
 [RootWindow]
 ScreenPosition=X=107.200 Y=51.200
-WindowSize=X=1328.800 Y=768.800
+WindowSize=X=1330.400 Y=770.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
