Car movement blueprint fixed 1

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,12 +132,12 @@ GridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Maps/Street
-MRUItem1=/Game/Maps/School
-MRUItem2=/Game/Maps/Hospital
-MRUItem3=/Game/Maps/Park
-MRUItem4=/Game/Maps/Alley
-MRUItem5=/Game/Maps/LevelSelection
-MRUItem6=/Game/Maps/Menu
+MRUItem1=/Game/Maps/Menu
+MRUItem2=/Game/Maps/School
+MRUItem3=/Game/Maps/Hospital
+MRUItem4=/Game/Maps/Park
+MRUItem5=/Game/Maps/Alley
+MRUItem6=/Game/Maps/LevelSelection
 MRUItem7=/Game/Maps/TrashPlace
 MRUItem8=/Game/ThirdPersonBP/Menu
 MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -178,7 +178,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Street
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -212,31 +212,30 @@ LastLevel=/Game/Maps/Street
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Assets/3D/City/street_kinda_Cube_051.street_kinda_Cube_051
-OpenAssetsAtExit=/Game/Maps/Street.Street:PersistentLevel.Street
 OpenAssetsAtExit=/Game/Blueprints/Street/Car1.Car1
+OpenAssetsAtExit=/Game/Maps/Street.Street:PersistentLevel.Street
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Street/Car1
-MRUItem1=/Game/Assets/3D/City/street_kinda_Cube_051
-MRUItem2=/Game/Maps/Street
-MRUItem3=/Game/Maps/School
-MRUItem4=/Game/Assets/3D/City/street_kinda_Cube_035
-MRUItem5=/Game/Assets/3D/City/street_kinda_Cube_055
-MRUItem6=/Game/Assets/3D/City/street_kinda_Cube_052
-MRUItem7=/Game/Assets/3D/City/street_kinda_Cube_054
-MRUItem8=/Game/Maps/Hospital
-MRUItem9=/Game/Assets/3D/City/Sidewalk/Material_033
-MRUItem10=/Game/Assets/3D/City/Sidewalk/side_walk_thingy
-MRUItem11=/Game/Maps/Park
-MRUItem12=/Game/Assets/3D/City/lambert5
-MRUItem13=/Game/Assets/3D/City/House_Materials/Third/Material_001
-MRUItem14=/Game/Assets/3D/City/House_Materials/Third/Material_003
-MRUItem15=/Game/Assets/3D/City/House_Materials/Third/Material_006
-MRUItem16=/Game/Assets/3D/City/House_Materials/Second/Material_001
-MRUItem17=/Game/Assets/3D/City/House_Materials/Second/Material_006
-MRUItem18=/Game/Assets/3D/City/House_Materials/Second/Material_003
-MRUItem19=/Game/Assets/3D/City/House_Materials/Second/Material_022
+MRUItem0=/Game/Maps/Street
+MRUItem1=/Game/Maps/Menu
+MRUItem2=/Game/Blueprints/Street/Car1
+MRUItem3=/Game/Assets/3D/City/street_kinda_Cube_051
+MRUItem4=/Game/Maps/School
+MRUItem5=/Game/Assets/3D/City/street_kinda_Cube_035
+MRUItem6=/Game/Assets/3D/City/street_kinda_Cube_055
+MRUItem7=/Game/Assets/3D/City/street_kinda_Cube_052
+MRUItem8=/Game/Assets/3D/City/street_kinda_Cube_054
+MRUItem9=/Game/Maps/Hospital
+MRUItem10=/Game/Assets/3D/City/Sidewalk/Material_033
+MRUItem11=/Game/Assets/3D/City/Sidewalk/side_walk_thingy
+MRUItem12=/Game/Maps/Park
+MRUItem13=/Game/Assets/3D/City/lambert5
+MRUItem14=/Game/Assets/3D/City/House_Materials/Third/Material_001
+MRUItem15=/Game/Assets/3D/City/House_Materials/Third/Material_003
+MRUItem16=/Game/Assets/3D/City/House_Materials/Third/Material_006
+MRUItem17=/Game/Assets/3D/City/House_Materials/Second/Material_001
+MRUItem18=/Game/Assets/3D/City/House_Materials/Second/Material_006
+MRUItem19=/Game/Assets/3D/City/House_Materials/Second/Material_003
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1319,6 +1318,21 @@ Street_C.Replication=True
 Street_C.Actor=True
 Street_C.Input=True
 K2Node_GetInputAxisValue.Input=True
+Car1_C.Default=True
+Car1_C.TransformCommon=True
+InterpToMovementComponent.Variable=True
+InterpToMovementComponent.Sockets=True
+InterpToMovementComponent.Control=True
+InterpToMovementComponent.Behaviour=True
+InterpToMovementComponent.Simulation=True
+InterpToMovementComponent.PlanarMovement=True
+InterpToMovementComponent.ComponentTick=True
+InterpToMovementComponent.MovementComponent=True
+InterpToMovementComponent.Tags=True
+InterpToMovementComponent.ComponentReplication=True
+InterpToMovementComponent.Activation=True
+InterpToMovementComponent.Cooking=True
+InterpToMovementComponent.Events=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1455,9 +1469,13 @@ GeomModifier_Pen="\"Object.Settings\" "
 Landscape="\"Object.Landscape.LandscapeMaterialsOverride\" "
 LandscapeProxy="\"Object.Landscape.LandscapeMaterialsOverride\" "
 BoneProxy="\"Object.Reference Transform.ReferenceScale\" "
+InterpToMovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[0]\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
+MovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[0]\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
+ActorComponent=
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
+RecentlyPlaced=/Game/Blueprints/Street/Car1.Car1;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_3.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_3;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_3_2;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2_3.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cylinder_2_3;
@@ -1476,7 +1494,6 @@ RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car_
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_1_2.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_1_2;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_21.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_21;
 RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_20.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_20;
-RecentlyPlaced=/Game/Assets/3D/Street/uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_19.uploads_files_1859787_Cartoon_Lowpoly_Car__1__Cube_19;
 
 [MessageLog]
 LastLogListing=PIE
@@ -1547,12 +1564,13 @@ LastLogListing=PIE
 /Game/Assets/3D/City/street_kinda_Cube_054.street_kinda_Cube_054=1
 /Game/Assets/3D/City/street_kinda_Cube_052.street_kinda_Cube_052=1
 /Game/Assets/3D/City/street_kinda_Cube_055.street_kinda_Cube_055=1
-/Game/Assets/3D/City/street_kinda_Cube_051.street_kinda_Cube_051=1
+/Game/Assets/3D/City/street_kinda_Cube_051.street_kinda_Cube_051=0
 /Game/Blueprints/Street/Car1.Car1=1
+/Game/Maps/Street.Street:PersistentLevel.Street=0
 
 [RootWindow]
-ScreenPosition=X=107.200 Y=51.200
-WindowSize=X=1330.400 Y=770.400
+ScreenPosition=X=136.000 Y=36.800
+WindowSize=X=1333.600 Y=773.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1573,7 +1591,7 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Street/uploads_files_1859787_Cartoon_Lowpoly_Car (1).fbx
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Street/car fixed.fbx
 GenericExport=../../../../../Unreal/Raccoozle/Content/
 GenericOpen=D:/Unreal/PuzzleRaccoon/Photoshop
 GenericSave=../../../../../Unreal/Raccoozle/Content/
@@ -2739,6 +2757,12 @@ LandscapeGizmoRenderComponent=
 LandscapeComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 LandscapeGizmoActiveActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 BP_CheckToAdvance_C=SkeletalMeshActor.Physics.ConstraintsGroup,
+Car1_C=
+K2Node_VariableGet=SkeletalMeshActor.Physics.ConstraintsGroup,
+UniformVector=
+InterpToMovementComponent=
+PropertyWrapper=SkeletalMeshActor.Physics.ConstraintsGroup,
+K2Node_VariableSet=SkeletalMeshActor.Physics.ConstraintsGroup,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
