--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -178,7 +178,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -212,30 +212,31 @@ LastLevel=/Game/Maps/Street
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Street/Car1.Car1
 OpenAssetsAtExit=/Game/Maps/Street.Street:PersistentLevel.Street
+OpenAssetsAtExit=/Game/Blueprints/Street/Car1.Car1
+OpenAssetsAtExit=/Game/Blueprints/Raccoon.Raccoon
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Street
-MRUItem1=/Game/Maps/Menu
-MRUItem2=/Game/Blueprints/Street/Car1
-MRUItem3=/Game/Assets/3D/City/street_kinda_Cube_051
-MRUItem4=/Game/Maps/School
-MRUItem5=/Game/Assets/3D/City/street_kinda_Cube_035
-MRUItem6=/Game/Assets/3D/City/street_kinda_Cube_055
-MRUItem7=/Game/Assets/3D/City/street_kinda_Cube_052
-MRUItem8=/Game/Assets/3D/City/street_kinda_Cube_054
-MRUItem9=/Game/Maps/Hospital
-MRUItem10=/Game/Assets/3D/City/Sidewalk/Material_033
-MRUItem11=/Game/Assets/3D/City/Sidewalk/side_walk_thingy
-MRUItem12=/Game/Maps/Park
-MRUItem13=/Game/Assets/3D/City/lambert5
-MRUItem14=/Game/Assets/3D/City/House_Materials/Third/Material_001
-MRUItem15=/Game/Assets/3D/City/House_Materials/Third/Material_003
-MRUItem16=/Game/Assets/3D/City/House_Materials/Third/Material_006
-MRUItem17=/Game/Assets/3D/City/House_Materials/Second/Material_001
-MRUItem18=/Game/Assets/3D/City/House_Materials/Second/Material_006
-MRUItem19=/Game/Assets/3D/City/House_Materials/Second/Material_003
+MRUItem0=/Game/Blueprints/Raccoon
+MRUItem1=/Game/Blueprints/Street/Car1
+MRUItem2=/Game/Maps/Street
+MRUItem3=/Game/Maps/Menu
+MRUItem4=/Game/Assets/3D/City/street_kinda_Cube_051
+MRUItem5=/Game/Maps/School
+MRUItem6=/Game/Assets/3D/City/street_kinda_Cube_035
+MRUItem7=/Game/Assets/3D/City/street_kinda_Cube_055
+MRUItem8=/Game/Assets/3D/City/street_kinda_Cube_052
+MRUItem9=/Game/Assets/3D/City/street_kinda_Cube_054
+MRUItem10=/Game/Maps/Hospital
+MRUItem11=/Game/Assets/3D/City/Sidewalk/Material_033
+MRUItem12=/Game/Assets/3D/City/Sidewalk/side_walk_thingy
+MRUItem13=/Game/Maps/Park
+MRUItem14=/Game/Assets/3D/City/lambert5
+MRUItem15=/Game/Assets/3D/City/House_Materials/Third/Material_001
+MRUItem16=/Game/Assets/3D/City/House_Materials/Third/Material_003
+MRUItem17=/Game/Assets/3D/City/House_Materials/Third/Material_006
+MRUItem18=/Game/Assets/3D/City/House_Materials/Second/Material_001
+MRUItem19=/Game/Assets/3D/City/House_Materials/Second/Material_006
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1333,6 +1334,9 @@ InterpToMovementComponent.ComponentReplication=True
 InterpToMovementComponent.Activation=True
 InterpToMovementComponent.Cooking=True
 InterpToMovementComponent.Events=True
+GameNetworkManager.TransformCommon=True
+GameNetworkManager.Replication=True
+GameNetworkManager.Actor=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1472,6 +1476,14 @@ BoneProxy="\"Object.Reference Transform.ReferenceScale\" "
 InterpToMovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[0]\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
 MovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[0]\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
 ActorComponent=
+StaticMeshComponent="\"Object.Tags.ComponentTags\" "
+MeshComponent="\"Object.Tags.ComponentTags\" "
+PrimitiveComponent=
+SceneComponent=
+SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
+SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
+CapsuleComponent=
+ShapeComponent=
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
@@ -1570,7 +1582,7 @@ LastLogListing=PIE
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1333.600 Y=773.600
+WindowSize=X=1335.200 Y=775.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2664,7 +2676,7 @@ bHideUnrelatedNodes=False
 
 [DetailCustomWidgetExpansion]
 SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,
-SceneComponent=
+SceneComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 CameraActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 Actor=SkeletalMeshActor.Physics.ConstraintsGroup,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings.NewActionMapping_3,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_4,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.Run,
@@ -2736,7 +2748,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bi
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings.NewActionMapping_3,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_4,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.Run,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings.NewActionMapping_3,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_4,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.Run,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings.NewActionMapping_3,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_4,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.Run,
-CapsuleComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
+CapsuleComponent=
 Raccoon_C=
 PlayerStart=SkeletalMeshActor.Physics.ConstraintsGroup,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
@@ -2763,6 +2775,7 @@ UniformVector=
 InterpToMovementComponent=
 PropertyWrapper=SkeletalMeshActor.Physics.ConstraintsGroup,
 K2Node_VariableSet=SkeletalMeshActor.Physics.ConstraintsGroup,
+Animation_Raccoon_C=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
