Street level fix 2

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -212,14 +212,14 @@ LastLevel=/Game/Maps/Street
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Maps/Street.Street:PersistentLevel.Street
 OpenAssetsAtExit=/Game/Blueprints/Street/Car1.Car1
 OpenAssetsAtExit=/Game/Blueprints/Raccoon.Raccoon
+OpenAssetsAtExit=/Game/Maps/Street.Street:PersistentLevel.Street
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Raccoon
-MRUItem1=/Game/Blueprints/Street/Car1
-MRUItem2=/Game/Maps/Street
+MRUItem1=/Game/Maps/Street
+MRUItem2=/Game/Blueprints/Street/Car1
 MRUItem3=/Game/Maps/Menu
 MRUItem4=/Game/Assets/3D/City/street_kinda_Cube_051
 MRUItem5=/Game/Maps/School
@@ -1337,6 +1337,7 @@ InterpToMovementComponent.Events=True
 GameNetworkManager.TransformCommon=True
 GameNetworkManager.Replication=True
 GameNetworkManager.Actor=True
+Street_C.Default=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1484,6 +1485,8 @@ SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
 CapsuleComponent=
 ShapeComponent=
+Car1_C=
+BoxComponent="\"Object.Tags.ComponentTags\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
@@ -1582,7 +1585,7 @@ LastLogListing=PIE
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1335.200 Y=775.200
+WindowSize=X=1336.800 Y=776.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2770,12 +2773,15 @@ LandscapeComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 LandscapeGizmoActiveActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 BP_CheckToAdvance_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 Car1_C=
-K2Node_VariableGet=SkeletalMeshActor.Physics.ConstraintsGroup,
+K2Node_VariableGet=SkeletalMeshActor.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,
 UniformVector=
 InterpToMovementComponent=
-PropertyWrapper=SkeletalMeshActor.Physics.ConstraintsGroup,
+PropertyWrapper=SkeletalMeshActor.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.None,
 K2Node_VariableSet=SkeletalMeshActor.Physics.ConstraintsGroup,
 Animation_Raccoon_C=
+DragDropOperation=
+StaticMeshSocket=
+BP_Object1_C=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
