Collision fix with cars
Final blueprints to the car collision, since at first the collision wasn't happening

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -211,32 +211,29 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/Maps/Street
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Street/Car1.Car1
-OpenAssetsAtExit=/Game/Blueprints/Raccoon.Raccoon
-OpenAssetsAtExit=/Game/Maps/Street.Street:PersistentLevel.Street
+CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Raccoon
-MRUItem1=/Game/Maps/Street
+MRUItem0=/Game/Blueprints/Collectibles/BP_Object1
+MRUItem1=/Game/Blueprints/Raccoon
 MRUItem2=/Game/Blueprints/Street/Car1
-MRUItem3=/Game/Maps/Menu
-MRUItem4=/Game/Assets/3D/City/street_kinda_Cube_051
-MRUItem5=/Game/Maps/School
-MRUItem6=/Game/Assets/3D/City/street_kinda_Cube_035
-MRUItem7=/Game/Assets/3D/City/street_kinda_Cube_055
-MRUItem8=/Game/Assets/3D/City/street_kinda_Cube_052
-MRUItem9=/Game/Assets/3D/City/street_kinda_Cube_054
-MRUItem10=/Game/Maps/Hospital
-MRUItem11=/Game/Assets/3D/City/Sidewalk/Material_033
-MRUItem12=/Game/Assets/3D/City/Sidewalk/side_walk_thingy
-MRUItem13=/Game/Maps/Park
-MRUItem14=/Game/Assets/3D/City/lambert5
-MRUItem15=/Game/Assets/3D/City/House_Materials/Third/Material_001
-MRUItem16=/Game/Assets/3D/City/House_Materials/Third/Material_003
-MRUItem17=/Game/Assets/3D/City/House_Materials/Third/Material_006
-MRUItem18=/Game/Assets/3D/City/House_Materials/Second/Material_001
-MRUItem19=/Game/Assets/3D/City/House_Materials/Second/Material_006
+MRUItem3=/Game/Maps/Street
+MRUItem4=/Game/Maps/Menu
+MRUItem5=/Game/Assets/3D/City/street_kinda_Cube_051
+MRUItem6=/Game/Maps/School
+MRUItem7=/Game/Assets/3D/City/street_kinda_Cube_035
+MRUItem8=/Game/Assets/3D/City/street_kinda_Cube_055
+MRUItem9=/Game/Assets/3D/City/street_kinda_Cube_052
+MRUItem10=/Game/Assets/3D/City/street_kinda_Cube_054
+MRUItem11=/Game/Maps/Hospital
+MRUItem12=/Game/Assets/3D/City/Sidewalk/Material_033
+MRUItem13=/Game/Assets/3D/City/Sidewalk/side_walk_thingy
+MRUItem14=/Game/Maps/Park
+MRUItem15=/Game/Assets/3D/City/lambert5
+MRUItem16=/Game/Assets/3D/City/House_Materials/Third/Material_001
+MRUItem17=/Game/Assets/3D/City/House_Materials/Third/Material_003
+MRUItem18=/Game/Assets/3D/City/House_Materials/Third/Material_006
+MRUItem19=/Game/Assets/3D/City/House_Materials/Second/Material_001
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1442,7 +1439,7 @@ FrameNumberDisplayFormat=Seconds
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object=
+Object="\"Object.Tags.ComponentTags\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1476,11 +1473,11 @@ LandscapeProxy="\"Object.Landscape.LandscapeMaterialsOverride\" "
 BoneProxy="\"Object.Reference Transform.ReferenceScale\" "
 InterpToMovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[0]\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
 MovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[0]\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
-ActorComponent=
+ActorComponent="\"Object.Tags.ComponentTags\" "
 StaticMeshComponent="\"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Tags.ComponentTags\" "
-PrimitiveComponent=
-SceneComponent=
+PrimitiveComponent="\"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Tags.ComponentTags\" "
 SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
 CapsuleComponent=
@@ -1580,7 +1577,7 @@ LastLogListing=PIE
 /Game/Assets/3D/City/street_kinda_Cube_052.street_kinda_Cube_052=1
 /Game/Assets/3D/City/street_kinda_Cube_055.street_kinda_Cube_055=1
 /Game/Assets/3D/City/street_kinda_Cube_051.street_kinda_Cube_051=0
-/Game/Blueprints/Street/Car1.Car1=1
+/Game/Blueprints/Street/Car1.Car1=0
 /Game/Maps/Street.Street:PersistentLevel.Street=0
 
 [RootWindow]
@@ -2782,6 +2779,7 @@ Animation_Raccoon_C=
 DragDropOperation=
 StaticMeshSocket=
 BP_Object1_C=
+LevelStreaming=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
