Street level last fix

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -178,7 +178,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -211,29 +211,31 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/Maps/Street
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Maps/Street.Street:PersistentLevel.Street
+OpenAssetsAtExit=/Game/Blueprints/Street/BP_Car1.BP_Car1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Collectibles/BP_Object1
-MRUItem1=/Game/Blueprints/Raccoon
-MRUItem2=/Game/Blueprints/Street/Car1
-MRUItem3=/Game/Maps/Street
-MRUItem4=/Game/Maps/Menu
-MRUItem5=/Game/Assets/3D/City/street_kinda_Cube_051
-MRUItem6=/Game/Maps/School
-MRUItem7=/Game/Assets/3D/City/street_kinda_Cube_035
-MRUItem8=/Game/Assets/3D/City/street_kinda_Cube_055
-MRUItem9=/Game/Assets/3D/City/street_kinda_Cube_052
-MRUItem10=/Game/Assets/3D/City/street_kinda_Cube_054
-MRUItem11=/Game/Maps/Hospital
-MRUItem12=/Game/Assets/3D/City/Sidewalk/Material_033
-MRUItem13=/Game/Assets/3D/City/Sidewalk/side_walk_thingy
-MRUItem14=/Game/Maps/Park
-MRUItem15=/Game/Assets/3D/City/lambert5
-MRUItem16=/Game/Assets/3D/City/House_Materials/Third/Material_001
-MRUItem17=/Game/Assets/3D/City/House_Materials/Third/Material_003
-MRUItem18=/Game/Assets/3D/City/House_Materials/Third/Material_006
-MRUItem19=/Game/Assets/3D/City/House_Materials/Second/Material_001
+MRUItem0=/Game/Blueprints/Street/BP_Car1
+MRUItem1=/Game/Blueprints/Street/WB_FadeBlack
+MRUItem2=/Game/Blueprints/Collectibles/BP_Object1
+MRUItem3=/Game/Blueprints/Raccoon
+MRUItem4=/Game/Blueprints/Street/Car1
+MRUItem5=/Game/Maps/Street
+MRUItem6=/Game/Maps/Menu
+MRUItem7=/Game/Assets/3D/City/street_kinda_Cube_051
+MRUItem8=/Game/Maps/School
+MRUItem9=/Game/Assets/3D/City/street_kinda_Cube_035
+MRUItem10=/Game/Assets/3D/City/street_kinda_Cube_055
+MRUItem11=/Game/Assets/3D/City/street_kinda_Cube_052
+MRUItem12=/Game/Assets/3D/City/street_kinda_Cube_054
+MRUItem13=/Game/Maps/Hospital
+MRUItem14=/Game/Assets/3D/City/Sidewalk/Material_033
+MRUItem15=/Game/Assets/3D/City/Sidewalk/side_walk_thingy
+MRUItem16=/Game/Maps/Park
+MRUItem17=/Game/Assets/3D/City/lambert5
+MRUItem18=/Game/Assets/3D/City/House_Materials/Third/Material_001
+MRUItem19=/Game/Assets/3D/City/House_Materials/Third/Material_003
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1335,6 +1337,13 @@ GameNetworkManager.TransformCommon=True
 GameNetworkManager.Replication=True
 GameNetworkManager.Actor=True
 Street_C.Default=True
+BP_Car1_C.Tick=True
+BP_Car1_C.Default=True
+BP_Car1_C.Replication=True
+BP_Car1_C.Rendering=True
+BP_Car1_C.Actor=True
+BP_Car1_C.Collision=True
+BP_Car1_C.Input=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1436,10 +1445,10 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [DetailPropertyExpansion]
-Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Tags.ComponentTags\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1473,11 +1482,11 @@ LandscapeProxy="\"Object.Landscape.LandscapeMaterialsOverride\" "
 BoneProxy="\"Object.Reference Transform.ReferenceScale\" "
 InterpToMovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[0]\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
 MovementComponent="\"Object.Control.ControlPoints\" \"Object.Control.ControlPoints.ControlPoints[0]\" \"Object.Control.ControlPoints.ControlPoints[1]\" "
-ActorComponent="\"Object.Tags.ComponentTags\" "
+ActorComponent=
 StaticMeshComponent="\"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object.Tags.ComponentTags\" "
+PrimitiveComponent=
+SceneComponent=
 SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Tags.ComponentTags\" "
 CapsuleComponent=
@@ -1579,10 +1588,11 @@ LastLogListing=PIE
 /Game/Assets/3D/City/street_kinda_Cube_051.street_kinda_Cube_051=0
 /Game/Blueprints/Street/Car1.Car1=0
 /Game/Maps/Street.Street:PersistentLevel.Street=0
+/Game/Blueprints/Street/WB_FadeBlack.WB_FadeBlack=1
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1336.800 Y=776.800
+WindowSize=X=1338.400 Y=778.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2676,7 +2686,7 @@ bHideUnrelatedNodes=False
 
 [DetailCustomWidgetExpansion]
 SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,
-SceneComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
+SceneComponent=
 CameraActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 Actor=SkeletalMeshActor.Physics.ConstraintsGroup,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings.NewActionMapping_3,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_4,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.Run,
